--- a/src/Color.css
+++ b/src/Color.css
@@ -8,27 +8,52 @@
     text-align: center;
 }
 
-<<<<<<< HEAD
-.fonts{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+.cleanText {
+    font-weight: 600;
+    color: #72ccf8;
+    background-color: #b702a5;
+    display: inline-block;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    transform: rotate(0deg);
+    transition: transform 0.3s ease-in-out;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
 }
 
-.oppGradientHome{
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to bottom, #606060 0%, #11e8bb 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    overflow: hidden;
+.cleanText:hover {
+    transform: scale(1.1) rotate(3deg) translateZ(0);
+}
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #FF0000;
+    color: #00ff95;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    background-image: linear-gradient(to right, #ffffff, #000000);
+}
+
+.button:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .gradientHome{
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom,  #11e8bb 0%,#8200c9 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: linear-gradient(to right,  #11e8bb 0%,#ff00e1 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     overflow: hidden;
 }
 
-=======
->>>>>>> c9ab15ac1cd4fbab06b4bd00cb64e03367a70113
 .home{
     text-align: center;
     background-color: rgba(232, 24, 24, 0.5);
